<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Private DNS Quick Setting</string>
    <string name="tile_name">Private DNS</string>
    <string name="dns_off">DNS Off</string>
    <string name="dns_auto">DNS Auto</string>
    <string name="dns_toggle">DNS Toggle</string>
    <string name="off">Off</string>
    <string name="auto">Auto</string>
    <string name="on">On</string>
    <string name="set_dns_off">Set Private DNS to Off</string>
    <string name="set_dns_auto">Set Private DNS to Auto</string>
    <string name="set_dns_on">Set Private DNS to On</string>
    <string name="toggle_dns">Toggle Private DNS</string>
    <string name="require_unlock">Require device to be unlocked to toggle tile</string>
    <string name="show_in_tile_tile">Show DNS in tile title instead of sub-title</string>
    <string name="dns_auto_as_inactive_tile">Show “DNS Auto” with an inactive tile state</string>
    <string name="dns_modes_to_toggle">DNS modes to toggle</string>
    <string name="other_settings">Other settings</string>
    <string name="toast_no_permission">WRITE_SECURE_SETTINGS permission not granted</string>
    <string name="dns_hostname_hint">DNS provider hostname</string>
    <string name="dns_label_hint">Label (optional)</string>
    <string name="toast_cannot_open_app_info">Error opening app info in Android: %1$s</string>
    <string name="toast_cannot_open_more_info">Error opening webpage: %1$s</string>
    <string name="shizuku_url" translatable="false">https://play.google.com/store/apps/details?id=moe.shizuku.privileged.api</string>
    <string name="shizuku" translatable="false">Shizuku</string>
    <string name="message_help">To modify the Private DNS settings, this app requires the WRITE_SECURE_SETTINGS permission, which can be granted by %1$s or ADB:</string>
    <string name="message_help_adb" translatable="false">adb shell pm grant %1$s android.permission.WRITE_SECURE_SETTINGS</string>
    <string name="permission_granted_using_shizuku">WRITE_SECURE_SETTINGS permission granted using Shizuku</string>
    <string name="tile_added">Private DNS tile added to Quick Settings</string>
    <string name="tile_not_added">Private DNS tile not added to Quick Settings. Error code = %1$d</string>
    <string name="tile_already_added">Private DNS tile already added to Quick Settings</string>
    <string name="more_details">More info</string>
    <string name="app_info">App info</string>
    <string name="add_tile">Add tile</string>
    <string name="add_dns_provider">Add DNS provider</string>
    <string name="dns_provider_already_exists">DNS provider already exists</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="dns_provider_deleted">Deleted: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="settings">Manage DNS</string>
    <string name="ok">OK</string>
    <string name="backup">Backup</string>
    <string name="backup_completed">Backup completed</string>
    <string name="backup_failed">Backup failed</string>
    <string name="toast_backup_help">Select a location to save the backup file</string>
    <string name="restore">Restore</string>
    <string name="restore_completed">Restore completed</string>
    <string name="restore_failed">Restore failed</string>
    <string name="toast_restore_help">Select a backup file to restore</string>
    <string name="no_file_picker">No file picker app available to select file</string>
    <string name="icon">Icon</string>
    <string name="select_icon">Change</string>
    <string name="default_icon">Default</string>
    <string name="toast_select_icon_help">Select a PNG or SVG file</string>
    <string name="app_shortcuts">App shortcuts</string>
    <string name="pin_to_home">Pin to home screen</string>
    <string name="launcher_icon_no_app_shortcuts">App shortcuts are not available while the launcher icon is disabled. You can still pin shortcuts to your home screen.\nTo enable app shortcuts, enable the launcher icon by tapping the icon in the top-right corner.</string>
    <string name="shortcut_limit_warning" tools:ignore="PluralsCandidate">Most launchers display a maximum of %1$d shortcuts. Currently selected: %2$d.</string>
    <string name="help">Help</string>
</resources>
